# rust-autotools

./: .gitignore  LICENSE  Makefile.tpl  README.md  binary.mk.in  cargo-autotoolsify  library.mk.in  proc-macro.mk.in  rustc-wrap
docs/: m4.md
examples/1/: configure  configure.ac  test.in
m4/: lcrust_checks.m4  lcrust_prog_rustc.m4
