AC_INIT

AC_CONFIG_MACRO_DIRS([m4/])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_PROG_INSTALL

AC_PROG_CC

LCRUST_PROG_RUSTC
LCRUST_RUSTC_VERSION

AX_PROG_CC_FOR_BUILD

LCRUST_PROG_RUSTC_FOR_BUILD
LCRUST_RUSTC_VERSION_FOR_BUILD

AC_SUBST([rustc_is_lccc])
AC_SUBST([build_rustc_is_lccc])

AC_CONFIG_FILES([test])

AC_OUTPUT 